# tucano

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  cep_usage.py  cnpj_usage.py  telefone_usage.py
examples/consultas/: cnpj_usage.py  ibge_usage.py
tests/: test_cep.py  test_cnpj.py  test_cpf.py  test_telefone.py
tests/validadores/: test_cep.py  test_cnpj.py  test_cpf.py  test_telefone.py
tucano/: __init__.py
tucano/consultas/: __init__.py  banco.py  cep.py  cnpj.py  ddd.py  feriados.py  fipe.py  ibge.py
tucano/core/: __init__.py  base.py  exceptions.py  http.py
tucano/validadores/: __init__.py  cep.py  cnpj.py  cpf.py  pix.py  telefone.py
tucano/validators/: __init__.py  cep.py  cnpj.py  cpf.py  placa.py  telefone.py
