[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tucano"
version = "0.1.0"
description = "Biblioteca Python para validação, formatação e geração de documentos brasileiros (CPF, CNPJ, CEP, telefone, PIX)"
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-cov>=4.0.0",
	"black>=23.0.0",
	"mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=tucano --cov-report=html --cov-report=term-missing -v"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true